# wezterm

wezterm-gui/: Cargo.toml
